# restaurant_drf

./: .env.sample  pyproject.toml
config/: settings.py  urls.py
menu/: admin.py  serializers.py  urls.py  views.py
users/: models.py
users/management/commands/: create_super_user.py
